[package]
name = "vcp_monitoring"
version = "0.1.0"
authors = ["Aron Heinecke <aron.heinecke@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10", features = ["blocking","cookies","gzip"]}
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
stable-eyre = "0.2"
regex = "1.4"
log = "0.4"
env_logger = "0.8"